--- a/Linear-Algebra.html
+++ b/Linear-Algebra.html
@@ -11,7 +11,7 @@
 <html lang="en-US">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Vector spaces</title>
+<title>Linear Algebra</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>window.MathJax = {
@@ -70,10 +70,10 @@
 </div></div>
 <nav xmlns:svg="http://www.w3.org/2000/svg" id="primary-navbar" class="navbar"><div class="container">
 <div class="navbar-top-buttons">
-<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="Elt-row-operations.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="Linear-Algebra.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="vs-def.html" title="Next">Next</a></span></div>
+<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><span id="previousbutton" class="previous-button button toolbar-item disabled">Prev</span><span id="upbutton" class="up-button button disabled toolbar-item">Up</span><a id="nextbutton" class="next-button button toolbar-item" href="frontmatter-1.html" title="Next">Next</a></span></div>
 </div>
 <div class="navbar-bottom-buttons toolbar toolbar-divisor-4">
-<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="Elt-row-operations.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="Linear-Algebra.html" title="Up">Up</a><a class="next-button button toolbar-item" href="vs-def.html" title="Next">Next</a>
+<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><span class="previous-button button toolbar-item disabled">Prev</span><span class="up-button button disabled toolbar-item">Up</span><a class="next-button button toolbar-item" href="frontmatter-1.html" title="Next">Next</a>
 </div>
 </div></nav></header><div class="page">
 <div xmlns:svg="http://www.w3.org/2000/svg" id="sidebar-left" class="sidebar" role="navigation"><div class="sidebar-content">
@@ -83,7 +83,7 @@
 <li class="link">
 <a href="Elt-row-operations.html" data-scroll="Elt-row-operations"><span class="codenumber">1</span> <span class="title">Elementary row operations</span></a><ul><li><a href="exercises-elt-row-operations.html" data-scroll="exercises-elt-row-operations">Exercises</a></li></ul>
 </li>
-<li class="link active">
+<li class="link">
 <a href="VS.html" data-scroll="VS"><span class="codenumber">2</span> <span class="title">Vector spaces</span></a><ul>
 <li><a href="vs-def.html" data-scroll="vs-def">Definition of a vector space</a></li>
 <li><a href="vs-examples.html" data-scroll="vs-examples">Examples of vector spaces</a></li>
@@ -95,16 +95,11 @@
 </li>
 </ul></nav><div class="extras"><nav><a class="mathbook-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
-<main class="main"><div id="content" class="pretext-content"><section xmlns:svg="http://www.w3.org/2000/svg" class="chapter" id="VS"><h2 class="heading">
-<span class="type">Chapter</span> <span class="codenumber">2</span> <span class="title">Vector spaces</span>
-</h2>
-<section class="introduction" id="introduction-2"><p id="p-6">In this chapter we give the definition of vector space over a field. This is a central concept for this course. As you will see, you have already encountered several examples of vector spaces.</p></section><nav class="summary-links"><ul>
-<li><a href="vs-def.html"><span class="codenumber">2.1</span> <span class="title">Definition of a vector space</span></a></li>
-<li><a href="vs-examples.html"><span class="codenumber">2.2</span> <span class="title">Examples of vector spaces</span></a></li>
-<li><a href="Ex-VS.html"><span class="codenumber">2.3</span> <span class="title">Exercises</span></a></li>
-<li><a href="linear-combination.html"><span class="codenumber">2.4</span> <span class="title">Linear combination</span></a></li>
-<li><a href="subspace.html"><span class="codenumber">2.5</span> <span class="title">Subspace of a vector space</span></a></li>
-<li><a href="Ex-subspace.html"><span class="codenumber">2.6</span> <span class="title">Exercises</span></a></li>
+<main class="main"><div id="content" class="pretext-content"><section xmlns:svg="http://www.w3.org/2000/svg" class="book" id="Linear-Algebra"><nav class="summary-links"><ul>
+<li><a href="frontmatter-1.html"><span class="title">Front Matter</span></a></li>
+<li><a href="preface-1.html"><span class="title">Preface</span></a></li>
+<li><a href="Elt-row-operations.html"><span class="codenumber">1</span> <span class="title">Elementary row operations</span></a></li>
+<li><a href="VS.html"><span class="codenumber">2</span> <span class="title">Vector spaces</span></a></li>
 </ul></nav></section></div></main>
 </div>
 </body>
