--- a/p-16.html
+++ b/p-16.html
@@ -15,7 +15,12 @@
 </head>
 <body>
 <h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
-<p>We define a linear combination of vectors in a vector space.</p>
-<span class="incontext"><a href="linear-combination.html#p-12">in-context</a></span>
+<p>Let \(V\) be a vector space over a field \(F\text{.}\) A set of vectors \(\{v_1,v_2,\ldots,v_n\}\subset V\) is said to be <dfn xmlns:svg="http://www.w3.org/2000/svg" class="terminology">linearly dependent</dfn> over \(F\) or vectors \(v_1,v_2,\ldots,v_n\) are linear dependent if there exists scalars \(\alpha_1,\alpha_2,\ldots,\alpha_n\in F\) not all zero such that</p>
+<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+\begin{equation*}
+\alpha_1 v_1+\alpha_2 v_2+\cdots+\alpha_n v_n=0.
+\end{equation*}
+</div>
+<span class="incontext"><a href="sec-linear-dependence.html#p-16">in-context</a></span>
 </body>
 </html>
