--- a/p-19.html
+++ b/p-19.html
@@ -14,8 +14,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>In other words, \(S\) is linearly independent over \(F\) if for any distinct vectors \(v_1,v_2,\ldots,v_r\in S\)</p>
+<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+\begin{equation*}
+\alpha_1 v_1+\alpha_2 v_2+\cdots+\alpha_r v_r=0\quad\text{implies that}\quad\alpha_i=0\quad\text{for all }i=1,2,\ldots,r.
+\end{equation*}
+</div>
+<span class="incontext"><a href="sec-linear-dependence.html#p-19">in-context</a></span>
 </body>
 </html>
