--- a/p-35.html
+++ b/p-35.html
@@ -15,7 +15,13 @@
 </head>
 <body>
 <h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
-<p>We define a linear combination of vectors in a vector space.</p>
-<span class="incontext"><a href="linear-combination.html#p-12">in-context</a></span>
+<p>Only the first row of \(R\) is nonzero and the leading term occurs in the first column. We have</p>
+<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+\begin{equation*}
+x_1+x_2+x_3=0.
+\end{equation*}
+</div>
+<p class="continuation">Solutions of the system \(RX=0\) are obtained by assigning arbitrary values to \(x_2,x_3\) and then computing the corresponding value for \(x_1\text{.}\) Consider the vectors \(v=(-1,1,0)^t\) and \(w=(-1,0,1)^t\text{.}\) We claim that \(\{v,w\}\) forms a basis for the space of solutions of \(RX=0\text{.}\) It is easy to see that \(\{v,w\}\) is linearly independent.</p>
+<span class="incontext"><a href="sec-basis-examples.html#p-35">in-context</a></span>
 </body>
 </html>
