--- a/p-36.html
+++ b/p-36.html
@@ -14,8 +14,14 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>Now suppose that \((s_1,s_2,s_3)^t\) is a solution of \(RX=0\text{.}\) Then,</p>
+<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+\begin{equation*}
+s_2\cdot v+s_3\cdot w=(-s_2-s_3,s_2,s_3)^t
+\end{equation*}
+</div>
+<p class="continuation">is also a solution of \(RX=0\text{.}\) Moreover, as \(s_1=-s_2-s_3\) we get that \((s_1,s_2,s_3)^t\) is a linear combination of \(v,w\text{.}\) Hence, \(\{v,w\}\) spans the space of solutions of \(RX=0\text{.}\)</p>
+<span class="incontext"><a href="sec-basis-examples.html#p-36">in-context</a></span>
 </body>
 </html>
