--- a/p-44.html
+++ b/p-44.html
@@ -15,7 +15,12 @@
 </head>
 <body>
 <h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
-<p>We define a linear combination of vectors in a vector space.</p>
-<span class="incontext"><a href="linear-combination.html#p-12">in-context</a></span>
+<p>We begin with an example. Consider the map \(T\colon\R^2\to\R^2\) defined by \(T\big((x,y)\big)=(-y,x)\text{.}\) This is the anticlockwise rotation by \(90^0\) in \(\R^2\text{.}\) This map has following two properties.</p>
+<ol class="decimal">
+<li><p>For any \(v\in\R^2\) and any \(\alpha\in\R\) we have \(T(\alpha v)=\alpha T(v)\text{.}\)</p></li>
+<li><p>For any \(v,w\in\R^2\) we have \(T(v+w)=T(v)+T(w)\text{.}\)</p></li>
+</ol>
+<p class="continuation">The above two properties will be a part of the defining properties of linear transformations.</p>
+<span class="incontext"><a href="sec-def-linear-transformation.html#p-44">in-context</a></span>
 </body>
 </html>
