--- a/p-59.html
+++ b/p-59.html
@@ -15,7 +15,15 @@
 </head>
 <body>
 <h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
-<p>We define a linear combination of vectors in a vector space.</p>
-<span class="incontext"><a href="linear-combination.html#p-12">in-context</a></span>
+<p>Since \(T\) is bijective, there exists unique \(a,b\in V\) such that \(T(a)=x\) and \(T(b)=y\text{.}\) Further, the \(F\)-linearity and bijectivity of \(T\) implies that \(T(\alpha a)=\alpha T(a)=\alpha x\) and \(T(\beta b)=\beta T(b)=\beta y\text{.}\) Thus, we also get \(T(\alpha a+\beta b)=\alpha x+\beta y\text{.}\) Hence,</p>
+<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+\begin{align*}
+S(\alpha x+\beta y)\amp=S\big(T(\alpha a+\beta b)\big)\\
+\amp=\alpha a +\beta b\\
+\amp=\alpha S\big(T(a)\big)+\beta S\big(T(b)\big)\\
+\amp=\alpha S(x)+\beta S(y).
+\end{align*}
+</div>
+<span class="incontext"><a href="sec-isomorphisms.html#p-59">in-context</a></span>
 </body>
 </html>
