--- a/p-63.html
+++ b/p-63.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>Similar computations for \(T^{-1}\circ T=I_V\) yield \([T^{-1}]_{\mathfrak{B}_W}^{\mathfrak{B}_V}\cdot[T]_{\mathfrak{B}_V}^{\mathfrak{B}_W}\) is the \(n\times n\) identity matrix.</p>
+<span class="incontext"><a href="sec-isomorphism-invertible-matrix.html#p-63">in-context</a></span>
 </body>
 </html>
