--- a/proof-7-hidden.html
+++ b/proof-7-hidden.html
@@ -13,9 +13,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body>
-<article class="remark remark-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Remark</span><span class="space"> </span><span class="codenumber">2.1.3</span><span class="period">.</span>
-</h6>Please try not to confuse the terminology of a vector that you have studied in 12th, viz., a vector is something that has a 'length', 'base', and it is denoted by an arrow, etc.. The definition above is what we will use throughout!</article><span class="incontext"><a href="vs-def.html#remark-2">in-context</a></span>
-</body>
+<body><article class="hiddenproof">Let \(A\in M_n(F)\) be an invertible matrix and \(B\) be its inverse. Consider the linear maps induced by \(A\text{,}\) \(L_A:x\mapsto Ax\) and induced by \(B\text{,}\) \(L_B:y\mapsto By\text{.}\) Thus,<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+\begin{equation*}
+L_A\circ L_B(y)=A(By)=y\quad\text{and}\quad L_B\circ L_A(x)=B(Ax)=x.
+\end{equation*}
+</div>Therefore, \(L_A\) as well as \(L_B\) are isomorphisms.</article></body>
 </html>
