--- a/row-column-space-iso-hidden.html
+++ b/row-column-space-iso-hidden.html
@@ -13,9 +13,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body>
-<article class="remark remark-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Remark</span><span class="space"> </span><span class="codenumber">2.1.3</span><span class="period">.</span>
-</h6>Please try not to confuse the terminology of a vector that you have studied in 12th, viz., a vector is something that has a 'length', 'base', and it is denoted by an arrow, etc.. The definition above is what we will use throughout!</article><span class="incontext"><a href="vs-def.html#remark-2">in-context</a></span>
-</body>
+<body><article class="exercise exercise-like">Let \(V=F^n\) and \(W=M_{n\times 1}(F)\) be vector spaces over a field \(F\text{.}\) Let \(e_i=(\delta_{i1},\delta_{i2},\ldots,\delta_{in})\text{.}\) Consider ordered bases \(\mathfrak{B}_V=\{e_i:1\leq i\leq n\}\) and \(\mathfrak{B}_W=(e_i^t:1\leq i\leq n)\) of \(V\) and \(W\text{,}\) respectively. Then, linear transformation \(T\colon V\to W\) given by \(x\mapsto x^t\) is an \(F\)-isomorphism.</article></body>
 </html>
