--- a/theorem-4.html
+++ b/theorem-4.html
@@ -15,11 +15,7 @@
 </head>
 <body>
 <article class="theorem theorem-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Theorem</span><span class="space"> </span><span class="codenumber">2.5.3</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A nonempty subset \(W\) of \(V\) is subspace if and only if \(W\) is closed under addition and scalar multiplication or equivalently<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
-\begin{equation*}
-\text{if }\alpha,\beta\in F \text{ and } v,w\in W\text{ then, }\alpha v+\beta w\in W.
-\end{equation*}
-</div></article><span class="incontext"><a href="subspace.html#subspace-criterion">in-context</a></span>
+<span class="type">Theorem</span><span class="space"> </span><span class="codenumber">3.4.7</span><span class="period">.</span>
+</h6>Let \(V\) be a finite-dimensional vector space over \(F\text{,}\) and let \(\{e_1,e_2,\ldots,e_n\}\) be a basis of \(V\text{.}\) If \(\mathfrak{B}=\{f_1,f_2,\ldots,f_r\}\subseteq V\) is linearly independent then, \(\mathfrak{B}\) can be extended to a basis of \(V\) by adding \(n-r\) vectors from \(\{e_1,e_2,\ldots,e_n\}\text{.}\)</article><span class="incontext"><a href="sec-results-basis-dim.html#theorem-4">in-context</a></span>
 </body>
 </html>
