--- a/p-21.html
+++ b/p-21.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>Let \(V\) be a vector space over a field \(F\text{.}\) The cardinality of a basis of \(V\) is called the <dfn xmlns:svg="http://www.w3.org/2000/svg" class="terminology">dimension</dfn> of \(V\text{.}\) It is denoted by \(\dim_F V\) or by \([V:F]\text{.}\)</p>
+<span class="incontext"><a href="sec-basis-dim.html#p-21">in-context</a></span>
 </body>
 </html>
