--- a/p-28.html
+++ b/p-28.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>Similarly, either every \(\{v_1,\ldots,v_n,v_{n+1},w\}\) with \(w\in S\) is linearly dependent or there exists \(v_{n+2}\in S\) such that \(\{v_1,\ldots,v_n,v_{n+1},v_{n+2}\}\) is linearly independent. Continuing in this way, after a finite number of steps, we obtain a linearly independent subset of \(S\) such that any bigger subset of \(S\) is linearly dependent.</p>
+<span class="incontext"><a href="sec-results-basis-dim.html#p-28">in-context</a></span>
 </body>
 </html>
