--- a/p-32.html
+++ b/p-32.html
@@ -14,8 +14,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>Now we show that \(\mathfrak{B}\) spans \(F^n\text{.}\) Let \(x=(x_1,x_2,\ldots,x_n)\in F^n\text{.}\) We can write \(x\) as a linear combination of vectors in \(\mathfrak{B}\text{,}\) indeed,</p>
+<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+\begin{equation*}
+x=\sum_ix_ie_i.
+\end{equation*}
+</div>
+<span class="incontext"><a href="sec-basis-examples.html#p-32">in-context</a></span>
 </body>
 </html>
