--- a/p-38.html
+++ b/p-38.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>We claim that \(\{v_i\}_{i\in I}\) is linearly independent. Suppose that \(\sum_{i\in I}\beta_iv_i=0\text{.}\) We thus have \(\sum_{i\in I}\beta_iv_{ip}=0\text{.}\) Therefore, for \(p\in I\) we get \(\sum_{i\in I}\beta_i\delta_{ip}=0\) and thus \(\beta_p=0\text{.}\) Hence, the claim is proved.</p>
+<span class="incontext"><a href="sec-basis-examples.html#p-38">in-context</a></span>
 </body>
 </html>
