--- a/p-51.html
+++ b/p-51.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>Let \(V\) and \(W\) be finite-dimensional vector spaces over a field \(F\text{.}\) Suppose that \(\mathfrak{B}_V=(v_1,v_2,\ldots,v_n)\) and \(\mathfrak{B}_W=(w_1,w_2,\ldots,w_m)\) are ordered bases of \(V\) and \(W\text{,}\) respectively. Let \(T\colon V\to W\) be an \(F\)-linear transformation.</p>
+<span class="incontext"><a href="sec-ordered-basis-linear-trans.html#p-51">in-context</a></span>
 </body>
 </html>
