--- a/p-58.html
+++ b/p-58.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Paragraph</span></h6>
+<p>Let \(S\colon W\to V\) be the set-theoretic inverse of \(T\text{.}\) We need to show that for any \(\alpha,\beta\in W\) and any \(x,y\in W\text{,}\) \(S(\alpha x+\beta y)=\alpha S(x)+\beta S(y)\text{.}\)</p>
+<span class="incontext"><a href="sec-isomorphisms.html#p-58">in-context</a></span>
 </body>
 </html>
