--- a/proof-7.html
+++ b/proof-7.html
@@ -14,12 +14,10 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="theorem theorem-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Theorem</span><span class="space"> </span><span class="codenumber">2.5.3</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A nonempty subset \(W\) of \(V\) is subspace if and only if \(W\) is closed under addition and scalar multiplication or equivalently<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
+<article class="hiddenproof"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading"><span class="type">Proof</span></h6>Let \(A\in M_n(F)\) be an invertible matrix and \(B\) be its inverse. Consider the linear maps induced by \(A\text{,}\) \(L_A:x\mapsto Ax\) and induced by \(B\text{,}\) \(L_B:y\mapsto By\text{.}\) Thus,<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
 \begin{equation*}
-\text{if }\alpha,\beta\in F \text{ and } v,w\in W\text{ then, }\alpha v+\beta w\in W.
+L_A\circ L_B(y)=A(By)=y\quad\text{and}\quad L_B\circ L_A(x)=B(Ax)=x.
 \end{equation*}
-</div></article><span class="incontext"><a href="subspace.html#subspace-criterion">in-context</a></span>
+</div>Therefore, \(L_A\) as well as \(L_B\) are isomorphisms.</article><span class="incontext"><a href="sec-isomorphism-invertible-matrix.html#proof-7">in-context</a></span>
 </body>
 </html>
