--- a/remark-7.html
+++ b/remark-7.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<article class="remark remark-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
+<span class="type">Remark</span><span class="space"> </span><span class="codenumber">3.1.4</span><span class="period">.</span>
+</h6>A nonempty set \(S\) of vectors is linearly independent if and only if each nonempty finite subset of \(S\) is linearly independent.</article><span class="incontext"><a href="sec-linear-dependence.html#remark-7">in-context</a></span>
 </body>
 </html>
