--- a/unique-lin-combination.html
+++ b/unique-lin-combination.html
@@ -14,8 +14,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<article class="exercise exercise-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
+<span class="type">Exercise</span><span class="space"> </span><span class="codenumber">11<span class="period">.</span></span>
+</h6>Let \(V\) be a vector space over a field \(F\) with a basis \(\{v_1,v_2,\ldots,v_n\}\text{.}\) Show that every \(v\in V\) can be written <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">uniquely</em> as a linear combination of \(v_1,v_2,\ldots,v_n\text{.}\)</article><span class="incontext"><a href="ex-basis-dim.html#unique-lin-combination">in-context</a></span>
 </body>
 </html>
