--- a/zero-dime-vs-hidden.html
+++ b/zero-dime-vs-hidden.html
@@ -13,9 +13,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body>
-<article class="remark remark-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Remark</span><span class="space"> </span><span class="codenumber">2.1.3</span><span class="period">.</span>
-</h6>Please try not to confuse the terminology of a vector that you have studied in 12th, viz., a vector is something that has a 'length', 'base', and it is denoted by an arrow, etc.. The definition above is what we will use throughout!</article><span class="incontext"><a href="vs-def.html#remark-2">in-context</a></span>
-</body>
+<body><article class="example example-like"> A trivial abelian group \(V=\{0\}\) over a field \(F\) is a vector space. The scalar multiplication is given by \(\alpha\cdot 0=0\) for \(\alpha\in F\text{.}\) Note that zero-dimensional vector spaces over <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">different fields</em> are <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">different</em>!</article></body>
 </html>
