--- a/zero-vs-basis.html
+++ b/zero-vs-basis.html
@@ -14,8 +14,11 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<article class="definition definition-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Definition</span><span class="space"> </span><span class="codenumber">2.5.1</span><span class="period">.</span>
-</h6>Let \(V\) be a vector space over a field \(F\text{.}\) A (nonempty) subset \(W\) of \(V\) is said to be a <em xmlns:svg="http://www.w3.org/2000/svg" class="emphasis">subspace of \(V\)</em> if \(W\) is a vector space over \(F\) on its own right with operations of vector addition and scalar multiplication on \(V\text{.}\)</article><span class="incontext"><a href="subspace.html#subspace-of-vs">in-context</a></span>
+<article class="remark remark-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
+<span class="type">Remark</span><span class="space"> </span><span class="codenumber">3.1.5</span><span class="period">.</span>
+</h6>We make the following conventions. <ol class="decimal">
+<li><p>The empty set is linearly independent.</p></li>
+<li><p>The span of the empty set is the zero space \(\{0\}\text{.}\)</p></li>
+</ol></article><span class="incontext"><a href="sec-linear-dependence.html#zero-vs-basis">in-context</a></span>
 </body>
 </html>
