--- a/example-18.html
+++ b/example-18.html
@@ -15,11 +15,7 @@
 </head>
 <body>
 <article class="example example-like"><h6 xmlns:svg="http://www.w3.org/2000/svg" class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">2.5.9</span><span class="period">.</span><span class="space"> </span><span class="title">(Sum of subspaces).</span>
-</h6>Let \(V\) be a vector space over a field \(F\) and \(I\) be an indexing set. For each \(i\in I\text{,}\) let \(S_i\leq V\) be a subspace. The set<div xmlns:svg="http://www.w3.org/2000/svg" class="displaymath">
-\begin{equation*}
-\sum_{i\in I}S_i=\bigg\{v_1+v_2+\cdots+v_r:v_j\in\bigcup_{i\in I}S_i \text{ and }r\in\N \bigg\}
-\end{equation*}
-</div>is a subspace.</article><span class="incontext"><a href="subspace.html#example-13">in-context</a></span>
+<span class="type">Example</span><span class="space"> </span><span class="codenumber">3.6.4</span><span class="period">.</span><span class="space"> </span><span class="title">(A basis for polynomials of degree at most \(n\)).</span>
+</h6> Let \(F\) be a field and let \(\mathcal{P}_n(F)\) be the subspace of all polynomials in one variable over \(F\) of degree at most \(n\text{.}\) Consider \(\mathfrak{B}=\{1,x,x^2,\ldots,x^{n-1}\}\text{.}\) Check that \(\mathfrak{B}\) is a basis of \(\mathcal{P}_n(F)\text{.}\) <p>In particular \(\dim_F\big(\mathcal{P}_n(F)\big)=n\text{.}\)</p></article><span class="incontext"><a href="sec-basis-examples.html#example-18">in-context</a></span>
 </body>
 </html>
